# pymongo-fastapi-crud-vue

./: .gitignore  README.md  package-lock.json  pyproject.toml
pymongo_fastapi_crud_vue/: .env  main.py
