[tool.poetry]
name = "pymongo-fastapi-crud-vue"
version = "0.1.0"
description = ""
authors = ["leblancr <rich.leblanc1@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pymongo = "^4.8.0"
vue = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
